syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message SumRequest {
    int32 fist_number =1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompsitionRequest {
    int64 number = 1;
}

message PrimeNumberDecompsitionResponse {
 int64 prime_factor = 1;
}

message ComputeAverageRequest {
   int64 number = 1;
}

message ComputeAverageResponse {
   double number = 1;
}

message SquareRootRequest {
  int32 number = 1;
}
message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse){};
    rpc PrimeNumberDecompsition (PrimeNumberDecompsitionRequest) returns (stream PrimeNumberDecompsitionResponse){};
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse){};
    //error handling
    //this RPC will throw an excepation if the set number is negative
    //The error being sent if of type INVALID_ARGUMENT
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse){};
}
